# gpt-oss

./: .gitignore  gdp_bar_chart.py
finetune_gptoss/: gpt_oss_(20B)_Fine_tuning.ipynb  hermes_200_gptoss.jsonl
gpt_oss/: chat_llama.py
gpt_oss/metal/examples/: generate.py  interactive_generate.py  simple_generate.py
gpt_oss/torch/: model.py  utils.py  weights.py
my-gpt-project/: README.md  pnpm-lock.yaml
my-gpt-project/backend/gpt-oss-mcp-server/: START.md  browser_server.py  pyproject.toml  python_server.py  start_servers.sh
my-gpt-project/frontend/: package.json
my-gpt-project/frontend/_playground/: test_llama_cpp.py  test_llama_cpp.ts
my-gpt-project/frontend/src/: agents.ts
my-gpt-project/frontend/src/app/: globals.css  page.tsx
my-gpt-project/frontend/src/app/api/agent/init/: route.ts
my-gpt-project/frontend/src/app/api/basic/: route.ts
my-gpt-project/frontend/src/components/: App.tsx  History.tsx
my-gpt-project/frontend/src/components/messages/: FunctionCall.tsx  SearchResults.tsx  TextMessage.tsx  ThinkingBlock.tsx
my-gpt-project/frontend/src/components/ui/: CodeBlock.tsx  LoadingEffects.tsx  animated-shiny-text.tsx
my-gpt-project/frontend/src/lib/: formatters.ts
openai-agents-js/examples/basic/: hello-world-gpt-5.ts  hello-world-gpt-oss.ts  reasoning.ts
