[project]
name = "gpt-oss-mcp-server"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.12.2",
    "openai-harmony",
    "docker>=7.1.0",
    "aiohttp>=3.12.14",
    "html2text>=2025.4.15",
    "lxml>=4.9.4",
    "requests>=2.31.0",
    "structlog>=25.4.0",
    "tiktoken>=0.9.0",
    "chz>=0.3.0",
    "tenacity>=9.1.2",
    "pydantic>=2.11.7",
]
